1.2.0p3:
    Core:
    * Allow to add options to rules. Currently the options "disabled" and
      "comment" are allowed. Options are kept in an optional dict at the
      end of each rule.

    Checks & Agents:
    * mssql_backup: Fixed problems with datetime/timezone calculations
    * New Checks for Siemens Blades (BX600)
    * FIX: megaraid_pdisks: handle case where no enclosure device exists

    WATO:
    * Added permission to control the "clone host" feature in WATO
    * Added new role/permission matrix page in WATO to compare
      permissions of roles
    * FIX: remove line about number of rules in rule set overview
      (that garbled the logical layout)
    * Rules now have an optional comment and can be disabled without
      deleting them.

    BI:
    * Great speed up of rule compilation in large environments

    Multisite:
    * FIX: fixed localization of general permissions
    * FIX: show multisite warning messages even after page reload
    * FIX: fix bug in Age ValueSpec: days had been ignored

    Livecheck:
    * FIX: Compile livecheck also if diet libc is missing

1.2.0p2:
    Core:
    * simulation_mode: legacy_checks, custom_checks and active_checks
      are replaced with dummy checks always being OK
    * FIX: Precisely define order of reading of configuration files. This
      fixes a WATO rule precedence problem

    Checks & Agents:
    * FIX: Fixed syntax errors in a bunch of man pages
    * if_lancom: silently ignore Point-To-Point interfaces
    * if_lancom: add SSID to logical WLAN interface names
    * Added a collection of MSSQL checks for monitoring MSSQL servers
      (backups, tablespaces, counters)
    * New check wut_webio_io: Monitor the IO input channels on W&T Web-IO 
      devices
    * nfsmounts: reclassify "Stale NFS handle" from WARN to CRIT
    * ORACLE agent/checks: better error handling. Let SQL errors get
      through into check output, output sections even if no database
      is running.