@@ -1,17 +1,42 @@
-title: Capacity check for MySQL tablespaces
+title: Size check for MySQL tablespaces
 agents: linux
-author: Mathias Kettner <mk@mathias-kettner.de>
+author: Florian Heigl <fh@mathias-kettner.de>
 license: GPL
 distribution: check_mk
 description:
- This check verifies the space used and available for MySQL databases as 
- returned from MySQL.
+ This check verifies the space used by MySQL databases as 
+ returned from MySQL. The information is built by summing up 
+ the space for indices and tables of a given database.
 
- The check is configured like the {df} check for filesystems including trend reporting.
+ It relies on the information returned from MySQL, which can be incorrect
+ as MySQL does not always account for all database information.
+
+ In practice, the check works well for {InnoDB}. 
+ This should even include InnoDB on raw partitions.
+
+ {MyISAM} reporting is not possible as MySQL does not make the
+ data available. (See the dirsize checks as a workaround should you
+ really use MyISAM)
+
+ The check will go to {WARN} or {CRIT} levels if a user-specified 
+ limit is exceeded.
 
 inventory:
  The check generates one item per Database found.
  Internal MySQL databases are ignored.
 
 perfdata:
-  See {df} man page for performance data.
+  The current size of the database, and {WARN} and {CRIT} levels if they
+  are set.
+
+examples:
+  # Configure a WARN / CRIT level of 100GB / 200GB for all systems.
+  check_parameters += [
+    ((100000, 300000), ALL_HOSTS, [ "MySQL DB.*Size" ]),
+  ]
+
+[parameters]
+warn(int): warning level for the database size in MB
+crit(int): critical level for the dataase size in MB
+
+
